manifests/polaris/01-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polaris-dashboard
  namespace: polaris
  annotations:
    cert-manager.io/cluster-issuer: minicloud-ca
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: polaris.10.0.0.200.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: polaris-dashboard
                port:
                  number: 80
  tls:
    - secretName: polaris-tls
      hosts:
        - polaris.10.0.0.200.nip.io
